@@ -4,34 +4,41 @@ import org.jeasy.rules.api.Rule;
 import org.jeasy.rules.core.RuleBuilder;
 import org.openremote.container.timer.TimerService;
 import org.openremote.manager.asset.AssetStorageService;
-import org.openremote.manager.rules.facade.NotificationsFacade;
-import org.openremote.manager.rules.flow.*;
+import org.openremote.manager.rules.flow.NodeExecutionRequestInfo;
+import org.openremote.manager.rules.flow.NodeModel;
+import org.openremote.manager.rules.flow.NodeTriggerFunction;
+import org.openremote.manager.rules.flow.NodeTriggerParameters;
 import org.openremote.model.rules.*;
-import org.openremote.model.rules.flow.*;
+import org.openremote.model.rules.flow.Node;
+import org.openremote.model.rules.flow.NodeCollection;
+import org.openremote.model.rules.flow.NodeSocket;
+import org.openremote.model.rules.flow.NodeType;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.logging.Logger;
 
 public class FlowRulesBuilder {
-    private AssetStorageService assetStorageService;
-    private Map<String, Long> triggerMap = new LinkedHashMap<>();
-    private List<NodeCollection> nodeCollections = new ArrayList<>();
-    private Assets assetsFacade;
-    private Users usersFacade;
-    private Notifications notificationFacade;
-    private HistoricDatapoints historicDatapointsFacade;
-    private PredictedDatapoints predictedDatapointsFacade;
 
-    private TimerService timerService;
-
+    protected final Logger LOG;
+    protected final AssetStorageService assetStorageService;
+    protected final Map<String, Long> triggerMap = new HashMap<>();
+    protected final List<NodeCollection> nodeCollections = new ArrayList<>();
+    protected final Assets assetsFacade;
+    protected final Users usersFacade;
+    protected final Notifications notificationFacade;
+    protected final HistoricDatapoints historicDatapointsFacade;
+    protected final PredictedDatapoints predictedDatapointsFacade;
+    protected final TimerService timerService;
+  
     public FlowRulesBuilder(
-            TimerService timerService,
-            AssetStorageService assetStorageService,
-            Assets assetsFacade,
-            Users usersFacade,
-            Notifications notificationFacade,
-            HistoricDatapoints historicDatapointsFacade,
-            PredictedDatapoints predictedDatapointsFacade) {
+        Logger logger,
+        TimerService timerService,
+        AssetStorageService assetStorageService,
+        Assets assetsFacade,
+        Users usersFacade,
+        Notifications notificationFacade,
+        HistoricDatapoints historicDatapointsFacade,
+        PredictedDatapoints predictedDatapointsFacade) {
         this.timerService = timerService;
         this.assetStorageService = assetStorageService;
         this.assetsFacade = assetsFacade;
@@ -39,6 +46,7 @@ public class FlowRulesBuilder {
         this.notificationFacade = notificationFacade;
         this.historicDatapointsFacade = historicDatapointsFacade;
         this.predictedDatapointsFacade = predictedDatapointsFacade;
+        LOG = logger;
     }
 
     public void add(NodeCollection nodeCollection) {
@@ -52,11 +60,11 @@ public class FlowRulesBuilder {
             for (Node node : collection.getNodes()) {
                 if (node.getType() != NodeType.OUTPUT) continue;
                 try {
-                    RulesEngine.RULES_LOG.fine("Flow rule created");
+                    LOG.fine("Flow rule created");
                     rules.add(createRule(collection.getName() + " - " + count, collection, node));
                     count++;
                 } catch (Exception e) {
-                    RulesEngine.RULES_LOG.severe("Flow rule error: " + e.getMessage());
+                    LOG.severe("Flow rule error: " + e.getMessage());
                 }
             }
         }
@@ -66,13 +74,8 @@ public class FlowRulesBuilder {
     private Rule createRule(String name, NodeCollection collection, Node outputNode) throws Exception {
         Object implementationResult = NodeModel.getImplementationFor(outputNode.getName()).execute(new NodeExecutionRequestInfo(collection, outputNode, null, null, assetsFacade, usersFacade, notificationFacade, historicDatapointsFacade, predictedDatapointsFacade));
 
-        if (implementationResult == null)
-            throw new NullPointerException(outputNode.getName() + " node returns null");
-
-        if (!(implementationResult instanceof RulesBuilder.Action))
+        if (!(implementationResult instanceof RulesBuilder.Action action))
             throw new Exception(outputNode.getName() + " node does not return an action");
-
-        RulesBuilder.Action action = (RulesBuilder.Action) implementationResult;
 
         RulesBuilder.Condition condition = facts -> {
             List<Node> connectedTree = backtrackFrom(collection, outputNode);
@@ -89,16 +92,14 @@ public class FlowRulesBuilder {
                 name(name).
                 description(collection.getDescription()).
                 when(facts -> {
-                    Object result;
-                    try {
-                        result = condition.evaluate((RulesFacts) facts);
-                    } catch (Exception ex) {
-                        throw new RuntimeException("Error evaluating condition of rule '" + name + "': " + ex.getMessage(), ex);
-                    }
+                    Object result = condition.evaluate((RulesFacts) facts);
+
                     if (result instanceof Boolean) {
                         return (boolean) result;
                     } else {
-                        throw new IllegalArgumentException("Error evaluating condition of rule '" + name + "': result is not boolean but " + result);
+                        String msg = "Error evaluating condition of rule, expected boolean but got " + (result != null ? result.getClass() : "null");
+                        LOG.warning(msg);
+                        throw new IllegalArgumentException(msg);
                     }
                 }).
                 then(facts -> {
@@ -113,7 +114,7 @@ public class FlowRulesBuilder {
         List<Node> children = new ArrayList<>();
 
         for (NodeSocket s : node.getInputs()) {
-            children.addAll(Arrays.stream(collection.getConnections()).filter(c -> c.getTo().equals(s.getId())).map(c -> collection.getNodeById(collection.getSocketById(c.getFrom()).getNodeId())).collect(Collectors.toList()));
+            children.addAll(Arrays.stream(collection.getConnections()).filter(c -> c.getTo().equals(s.getId())).map(c -> collection.getNodeById(collection.getSocketById(c.getFrom()).getNodeId())).toList());
         }
 
         for (Node child : children) {
